zetasql/parser/testdata/grant_and_revoke.test
# TODO: Remove no_show_parse_location_text after parse locations
# have been manually verified as correct.
[default no_show_parse_location_text]
grant select, update on table foo to 'user@google.com'
--
GrantStatement [0-54]
  Privileges [6-20]
    Privilege [6-12]
      Identifier(`select`) [6-12]
    Privilege [14-20]
      Identifier(`update`) [14-20]
  Identifier(table) [24-29]
  PathExpression [30-33]
    Identifier(foo) [30-33]
  GranteeList [37-54]
    StringLiteral('user@google.com') [37-54]
--
GRANT `select`, `update` ON table foo TO 'user@google.com'
==

grant all privileges on view foo to @user1, @@user2, 'mdbuser/bar1', 'mdbuser/bar2'
--
GrantStatement [0-83]
  Privileges [6-20]
  Identifier(view) [24-28]
  PathExpression [29-32]
    Identifier(foo) [29-32]
  GranteeList [36-83]
    ParameterExpr [36-42]
      Identifier(user1) [37-42]
    SystemVariableExpr [44-51]
      PathExpression [46-51]
        Identifier(user2) [46-51]
    StringLiteral('mdbuser/bar1') [53-67]
    StringLiteral('mdbuser/bar2') [69-83]

--
GRANT ALL PRIVILEGES ON view foo TO @user1, @@user2, 'mdbuser/bar1', 'mdbuser/bar2'
==

grant all on datascape.foo to 'bar'
--
GrantStatement [0-35]
  Privileges [6-9]
  PathExpression [13-26]
    Identifier(datascape) [13-22]
    Identifier(foo) [23-26]
  GranteeList [30-35]
    StringLiteral('bar') [30-35]
--
GRANT ALL PRIVILEGES ON datascape.foo TO 'bar'
==

grant select, insert(col1, col2, col3), update(col2) on foo to 'mdbgroup/bar'
--
GrantStatement [0-77]
  Privileges [6-52]
    Privilege [6-12]
      Identifier(`select`) [6-12]
    Privilege [14-38]
      Identifier(insert) [14-20]
      PathExpressionList [20-38]
        PathExpression [21-25]
          Identifier(col1) [21-25]
        PathExpression [27-31]
          Identifier(col2) [27-31]
        PathExpression [33-37]
          Identifier(col3) [33-37]
    Privilege [40-52]
      Identifier(`update`) [40-46]
      PathExpressionList [46-52]
        PathExpression [47-51]
          Identifier(col2) [47-51]
  PathExpression [56-59]
    Identifier(foo) [56-59]
  GranteeList [63-77]
    StringLiteral('mdbgroup/bar') [63-77]
--
GRANT `select`, insert(col1, col2, col3), `update`(col2) ON foo TO 'mdbgroup/bar'
==

grant execute on script datascape.script_foo to 'group@google.com'
--
GrantStatement [0-66]
  Privileges [6-13]
    Privilege [6-13]
      Identifier(execute) [6-13]
  Identifier(script) [17-23]
  PathExpression [24-44]
    Identifier(datascape) [24-33]
    Identifier(script_foo) [34-44]
  GranteeList [48-66]
    StringLiteral('group@google.com') [48-66]
--
GRANT execute ON script datascape.script_foo TO 'group@google.com'
==

grant on foo to 'bar'
--
ERROR: Syntax error: Unexpected keyword ON [at 1:7]
grant on foo to 'bar'
      ^
==

grant all on to 'bar'
--
ERROR: Syntax error: Unexpected keyword TO [at 1:14]
grant all on to 'bar'
             ^
==

grant all on foo to bar
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got identifier "bar" [at 1:21]
grant all on foo to bar
                    ^
==

grant all on foo
--
ERROR: Syntax error: Expected "." or keyword TO but got end of statement [at 1:17]
grant all on foo
                ^
==

grant all on foo to
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got end of statement [at 1:20]
grant all on foo to
                   ^
==

grant all on foo to 'bar1', bar2
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got identifier "bar2" [at 1:29]
grant all on foo to 'bar1', bar2
                            ^
==

grant all on foo to 'bar1' bar2
--
ERROR: Syntax error: Expected end of input but got identifier "bar2" [at 1:28]
grant all on foo to 'bar1' bar2
                           ^
==

revoke all on foo from 'bar'
--
RevokeStatement [0-28]
  Privileges [7-10]
  PathExpression [14-17]
    Identifier(foo) [14-17]
  GranteeList [23-28]
    StringLiteral('bar') [23-28]
--
REVOKE ALL PRIVILEGES ON foo FROM 'bar'
==

revoke delete on table foo from 'mdbuser/bar'
--
RevokeStatement [0-45]
  Privileges [7-13]
    Privilege [7-13]
      Identifier(delete) [7-13]
  Identifier(table) [17-22]
  PathExpression [23-26]
    Identifier(foo) [23-26]
  GranteeList [32-45]
    StringLiteral('mdbuser/bar') [32-45]
--
REVOKE delete ON table foo FROM 'mdbuser/bar'
==

revoke all on table table from 'mdbuser/user', @user2, 'user3', @@user4;
--
RevokeStatement [0-71]
  Privileges [7-10]
  Identifier(table) [14-19]
  PathExpression [20-25]
    Identifier(table) [20-25]
  GranteeList [31-71]
    StringLiteral('mdbuser/user') [31-45]
    ParameterExpr [47-53]
      Identifier(user2) [48-53]
    StringLiteral('user3') [55-62]
    SystemVariableExpr [64-71]
      PathExpression [66-71]
        Identifier(user4) [66-71]
--
REVOKE ALL PRIVILEGES ON table table FROM 'mdbuser/user', @user2, 'user3', @@user4
==

revoke delete,update(col2) on view foo from 'mdbgroup/bar'
--
RevokeStatement [0-58]
  Privileges [7-26]
    Privilege [7-13]
      Identifier(delete) [7-13]
    Privilege [14-26]
      Identifier(`update`) [14-20]
      PathExpressionList [20-26]
        PathExpression [21-25]
          Identifier(col2) [21-25]
  Identifier(view) [30-34]
  PathExpression [35-38]
    Identifier(foo) [35-38]
  GranteeList [44-58]
    StringLiteral('mdbgroup/bar') [44-58]
--
REVOKE delete, `update`(col2) ON view foo FROM 'mdbgroup/bar'
==

revoke all on view foo to 'mdbgroup/bar'
--
ERROR: Syntax error: Expected "." or keyword FROM but got keyword TO [at 1:24]
revoke all on view foo to 'mdbgroup/bar'
                       ^
==

grant all, select on foo to 'bar'
--
ERROR: Syntax error: Expected keyword ON but got "," [at 1:10]
grant all, select on foo to 'bar'
         ^
==

revoke select, all on foo from 'bar'
--
ERROR: Syntax error: Unexpected keyword ALL [at 1:16]
revoke select, all on foo from 'bar'
               ^
==

grant all(a, b, c) on foo to 'bar'
--
ERROR: Syntax error: Expected keyword ON but got "(" [at 1:10]
grant all(a, b, c) on foo to 'bar'
         ^
==

grant all privileges, select on foo to 'bar'
--
ERROR: Syntax error: Expected keyword ON but got "," [at 1:21]
grant all privileges, select on foo to 'bar'
                    ^
==

grant select, all privileges on foo to 'bar'
--
ERROR: Syntax error: Unexpected keyword ALL [at 1:15]
grant select, all privileges on foo to 'bar'
              ^
